--- a/app/globals.css
+++ b/app/globals.css
@@ -16,31 +16,36 @@
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font-family: 'AvenirNext', Open Sans, Lucida Grande, sans-serif;
+   box-sizing: border-box;
+   padding: 0;
+   margin: 0;
+   font-family: 'Avenir Next LT Pro', Open Sans, Lucida Grande, sans-serif;
 }
 
-body {
-   background-color: #F1F1F1;
-}
-
-header {
-   background-color: white;
+html {
+   body {
+      background-color: #F5F5F5;
+   }
 }
 
 main {
    min-height: calc(100vh - var(--header-height) - var(--footer-height));
+   padding: 1.5rem;
+   margin: 0 auto;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-weight: bold;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+   font-weight: bold;
 }
 
 h1 {
    font-size: 2.5rem;
-   font-weight: heavy;
+   font-weight: 900;
 }
 
 h2 {
@@ -59,38 +64,59 @@ h5 {
    font-size: 1rem;
 }
 
-header {
+html > body > header {
    height: 70px;
 }
 
-header .logo-container {
+/* header .logo-container a {
    height: calc(var(--header-height) - 20px);
 }
 
 header .logo-container span {
    font-size: 1.5rem;
    font-weight: 500;
-}
+} */
 
-header .navbar a {
+html > body > header .navbar a {
    text-decoration: none;
    padding: 0 1rem;
    font-weight: bold;
 }
 
-header .navbar a.active {
-   font-weight: 800;
+html > body > header .navbar a.active {
+   /* font-weight: 800; */
    color: var(--accent);
 }
 
-header .navbar a:hover {
+html > body > header .navbar a:hover {
    color: var(--accent-dark);
 }
 
-footer {
+html > body > footer {
    height: 300px;
 }
 
-svg.logo {
+svg.logo.shadowed {
    filter: drop-shadow(3px 3px 0px rgba(0, 0, 0, .25));
+}
+
+/* On hover on .location make ::before appears */
+.location::before {
+   display: none;
+   content: '';
+   position: absolute;
+   top: -250px;
+   left: 50%;
+   transform: translateX(-50%);
+   width: 744px;
+   height: 222px;
+   z-index: 100;
+   transition: opacity .3s ease-in-out;
+   background-image: url('/malaga.jpg');
+   background-size: cover;
+   background-position: center;
+}
+
+.location:hover::before {
+   display: block;
 }
